--- a/ng2-input-validator-demo/package.json
+++ b/ng2-input-validator-demo/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "ng2-input-validator": "0.0.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
