--- a/ng2-input-validator-demo/tsconfig.json
+++ b/ng2-input-validator-demo/tsconfig.json
@@ -12,8 +12,8 @@
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "dom"],
     "paths": {
-      "ng2-input-validator-dist": ["dist/ng2-input-validator"],
-      "ng2-input-validator-dist/*": ["dist/ng2-input-validator/*"]
+      "ng2-input-validator": ["dist/ng2-input-validator"],
+      "ng2-input-validator/*": ["dist/ng2-input-validator/*"]
     }
   }
 }
