--- a/ng2-input-validator-demo/projects/ng2-input-validator/package.json
+++ b/ng2-input-validator-demo/projects/ng2-input-validator/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ng2-input-validator",
-  "version": "0.0.4",
+  "version": "0.0.9",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^9.0.0",
+    "@angular/core": "^9.0.0"
   },
   "repository": {
     "type": "git",
