--- a/projects/ng2-input-validator/package.json
+++ b/projects/ng2-input-validator/package.json
@@ -1,9 +1,12 @@
 {
   "name": "ng2-input-validator",
-  "version": "14.0.0",
+  "version": "14.1.0",
   "peerDependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0"
+    "@angular/common": "^14.1.0",
+    "@angular/core": "^14.1.0"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   },
   "repository": {
     "type": "git",
